<resources>
    <string name="app_name">MindSnap</string>
    <string name="title">Memorize\nwith Image</string>
    <string name="start_btn">Get Started  →</string>
    <string name="wait">대기중..</string>
    <string name="result_title">Result</string>
    <string name="result_retry">Retry</string>
    <string name="result_download">Download</string>
    <string name="gallery">Gallery</string>
    <string name="create_image">Create Image</string>
    <string name="before_download">이미지를 저장한 후에 공유해주시길 바랍니다.</string>
    <string name="save_complete">이미지 저장이 완료되었습니다.</string>
    <string name="input_prompt_string">Input Prompt</string>
    <string name="generate">Generate</string>
    <string name="art_style_string">Art Style</string>
    <string name="fantasy_string">Fantasy</string>
    <string name="no_style_string">No Style</string>
    <string name="_3d_string">3D</string>
    <string name="artistic_string">Artistic</string>
    <string name="small_button_string">See All</string>
    <string name="prompt_empty">프롬프트는 빈값이 올 수 없습니다.</string>
    <string name="next">Next!</string>
    <string name="start">Start!</string>
</resources>