<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8FF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:bufferType="spannable"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/input_prompt"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:text="@string/input_prompt_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/rectangle_12"
        android:layout_width="339dp"
        android:layout_height="185dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rectangle_12_shape"
        app:layout_constraintTop_toBottomOf="@+id/input_prompt"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="677dp" />


    <RelativeLayout
        android:id="@+id/group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="462dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <View
            android:id="@+id/_bg__group_1_ek1"
            android:layout_width="397.94dp"
            android:layout_height="167.09dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="-462dp"
            android:background="@drawable/_bg__group_1_ek1_shape" />


        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="283dp"
            android:layout_marginTop="0dp">

            <View
                android:id="@+id/_bg__button_ek1"
                android:layout_width="77dp"
                android:layout_height="36dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/small_button"
                android:layout_width="58.4dp"
                android:layout_height="24.4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/small_button_string"
                android:textColor="@color/_bg__generate_ek1_color"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:id="@+id/rectangle_13"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="51dp"
            android:background="@drawable/rectangle_13_shape" />

        <ImageView
            android:id="@+id/rectangle_17"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="51dp"
            android:contentDescription="rectangle_17"
            android:src="@drawable/rectangle_17" />

        <ImageView
            android:id="@+id/rectangle_15"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="206dp"
            android:layout_marginTop="51dp"
            android:contentDescription="rectangle_15"
            android:src="@drawable/rectangle_15" />

        <ImageView
            android:id="@+id/rectangle_16"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="304dp"
            android:layout_marginTop="51dp"
            android:contentDescription="rectangle_16"
            android:src="@drawable/rectangle_16" />

        <TextView
            android:id="@+id/fantasy"
            android:layout_width="55.3dp"
            android:layout_height="20.3dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="151dp"
            android:gravity="center"
            android:text="@string/fantasy_string"
            android:textColor="@color/mindsnap_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/no_style"
            android:layout_width="59.3dp"
            android:layout_height="20.3dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="151dp"
            android:gravity="center"
            android:text="@string/no_style_string"
            android:textColor="@color/mindsnap_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/third"
            android:layout_width="24.3dp"
            android:layout_height="20.3dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="242dp"
            android:layout_marginTop="151dp"
            android:gravity="center"
            android:text="@string/_3d_string"
            android:textColor="@color/mindsnap_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/artistic"
            android:layout_width="51.3dp"
            android:layout_height="20.3dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="326dp"
            android:layout_marginTop="151dp"
            android:gravity="center"
            android:text="@string/artistic_string"
            android:textColor="@color/mindsnap_color"
            android:textSize="13sp" />


        <RelativeLayout
            android:id="@+id/raphael_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="76dp">

            <View
                android:id="@+id/_bg__raphael_no_ek1"
                android:layout_width="45.11dp"
                android:layout_height="45.11dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__raphael_no_ek1_shape" />

            <ImageView
                android:id="@+id/vector"
                android:layout_width="35.11dp"
                android:layout_height="35.11dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="vector"
                android:src="@drawable/vector" />

        </RelativeLayout>

        <TextView
            android:id="@+id/art_style"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/art_style_string"
            android:textColor="@color/mindsnap_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/generateBtn"
        android:layout_width="339dp"
        android:layout_height="56dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_design"
        app:layout_constraintTop_toBottomOf="@+id/group_1"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/generate"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/generateBtn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

