<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8FF"
    android:clipToOutline="true">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height='wrap_content'
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/result_title"
        android:textAppearance="@style/result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/result_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/icon_share"
        app:layout_constraintBottom_toTopOf="@+id/result_image"
        app:layout_constraintEnd_toEndOf="@+id/result_image" />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/box_border_30radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <!-- 리니어 레이아웃 안될때 사용, 아이콘 없음
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_download"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_design"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/result_retry"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/result_retry"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_retry"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/button_design"
        android:text="@string/result_download"
        android:textSize="15sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />
    -->

    <TextView
        android:id="@+id/result_prompt"
        android:layout_width="370dp"
        android:layout_height='72dp'
        android:layout_marginTop="16dp"
        android:background="@drawable/box_border_10radius"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:gravity="center"
        android:text="prompt"
        android:textAppearance="@style/result_prompt"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/result_image" />

    <LinearLayout
        android:id="@+id/result_retry"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:background="@drawable/button_design"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <ImageView
            android:id="@+id/result_retry_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_reset" />

        <TextView
            android:id="@+id/result_retry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_retry"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_download"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_design"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/result_retry">

        <ImageView
            android:id="@+id/result_download_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_download" />

        <TextView
            android:id="@+id/result_download_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_download"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>